syntax = "proto3";

option go_package = "github.com/zhaytee/matrix-rpc-bot/proto/compiled/go;pb_matrix";

package matrix;

service Matrix {
    rpc StartSession (StartSessionRequest) returns (stream SessionEvent);
    rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
    rpc Leave (LeaveRequest) returns (LeaveResponse);
    rpc SendTextMessage (SendTextMessageRequest) returns (SendTextMessageResponse);
    rpc SendReadReceipt (SendReadReceiptRequest) returns (SendReadReceiptResponse);
}

message GetAccessTokenRequest {
    string homeserver = 1;
    string username = 2;
    string password = 3;
}
message GetAccessTokenResponse {
    string user_id = 1;
    string home_server = 2;
    string access_token = 3;
    string device_id = 4;
}

message StartSessionRequest {
    string session_id = 1;
    string homeserver = 2;
    string user_id = 3;
    string display_name = 4;
    string device_id = 5;
    string access_token = 6;
    Presence initial_presence = 7;
}

message JoinRoomRequest {
    string session_id = 1;
    string room_id = 2;
}
message JoinRoomResponse {}

message LeaveRequest {
    string session_id = 1;
    string room_id = 2;
}
message LeaveResponse {}

message SendTextMessageRequest {
    string session_id = 1;
    string room_id = 2;
    string body = 3;
}
message SendTextMessageResponse {}

message SendReadReceiptRequest {
    string session_id = 1;
    string event_id = 2;
}
message SendReadReceiptResponse {}

//
//
// ---------------------------- SYSTEM OBJECTS --------------------------------
//
//

enum Presence {
    PRESENCE_UNSPECIFIED = 0;
    PRESENCE_ONLINE = 1;
    PRESENCE_OFFLINE = 2;
    PRESENCE_UNAVAILABLE = 3;
}

enum Msgtype {
    MSGTYPE_UNSPECIFIED = 0;
    MSGTYPE_M_TEXT = 1;
    MSGTYPE_M_EMOTE = 2;
}

message Receipt {
    Kind kind = 1;
    string event_id = 2;
    string user_id = 3;
    int64 timestamp = 4;
    
    enum Kind {
        KIND_UNSPECIFIED = 0;
        KIND_M_READ = 1;
    }
}

//
//
// -------------------------------- EVENTS &c ---------------------------------
//
//


message SessionEvent {
    string session_id = 1;
    string sender = 3;
    string room_id = 4;
    string event_id = 5;
    oneof content {
        MRoomMessage m_room_message = 6;
        MTyping m_typing = 7;
        MPresence m_presence = 8;
        XReady x_ready = 9;
        MReceipt m_receipt = 10;
    }
}

message MRoomMessage {
    string body = 1;
    Msgtype msgtype = 2;
}

message MTyping {
    repeated string user_ids = 1;
}

message MPresence {
    int64 last_active_ago = 1;
    Presence presence = 2;
    bool currently_active = 3;
}

message XReady {}

message MReceipt {
    repeated Receipt receipts = 1;
}
